--- a/R/report.Rmd
+++ b/R/report.Rmd
@@ -160,6 +160,24 @@ being excluded from the interval.
     returned range, but has the drawback of not being implementable in an actual database.
     We use it to see how fast this approach can potentially go.
 
+## Dataset distribution
+
+The following plots report the distribution of times in the dataset we use in the following
+experiments, which comprises $10\,000\,000$ intervals with start times uniformly
+distributed between 0 and 10 million, and durations distributed according to a Zipf
+law with $\beta=1$.
+
+```{r fig.fullwidth=TRUE, fig.width=10}
+cowplot::plot_grid(
+  readd(plot_distribution_start_time),
+  readd(plot_distribution_duration)
+)
+```
+
+Note that to allow distributions to have the distributions we want,
+we have to allow duplicate intervals.
+Otherwise, especially for the durations, it is almost impossible to have a lot of 
+small values.
 
 ## Range-duration queries
 
