--- a/R/report.Rmd
+++ b/R/report.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 # TODO
 
 - [ ] Add parallelism
-- [ ] Implement adaptive period index
+- [x] Implement adaptive period index
 - [x] Count the intervals touched by each query, to have an
       implementation-independent metric to compare the elements.
       Then as a performance metric we can consider the number of intervals examined normalized by the output size,
@@ -24,10 +24,12 @@ knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 
 ## Questions
 
-- [ ] Why don't we make the period index adaptive also on the duration? That way we 
+The three points below have been addressed by PeriodIndex++.
+
+- [x] Why don't we make the period index adaptive also on the duration? That way we 
       can lift the assumption that durations are zipf distributed
-- [ ] Can we do without the replication of intervals?
-- [ ] There seems to be a tradeoff with the number of buckets: more means fewer intervals analyzed but also more duplication.
+- [x] Can we do without the replication of intervals?
+- [x] There seems to be a tradeoff with the number of buckets: more means fewer intervals analyzed but also more duplication.
 
 # Research questions
 
@@ -170,10 +172,12 @@ law with $\beta=1$.
 ```{r fig.fullwidth=TRUE, fig.width=10}
 cowplot::plot_grid(
   readd(plot_distribution_start_time),
-  readd(plot_distribution_duration)
+  readd(plot_distribution_duration),
+  labels=c("Start times histogram", "Durations distribution")
 )
 ```
 
+The plots confirm that we are getting the distributions we ask for.
 Note that to allow distributions to have the distributions we want,
 we have to allow duplicate intervals.
 Otherwise, especially for the durations, it is almost impossible to have a lot of 
