Add option for dumping data/queries

--- a/R/references.bib
+++ b/R/references.bib
@@ -20,3 +20,11 @@
   year      = {2000}
 }
 
+@article{Marcus2020BenchmarkingLI,
+  title={Benchmarking Learned Indexes},
+  author={Ryan Marcus and Andreas Kipf and Alexander van Renen and Mihail Stoian and Sanchit Misra and A. Kemper and Thomas Neumann and T. Kraska},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2006.12804}
+}
+
