--- a/R/report.Rmd
+++ b/R/report.Rmd
@@ -195,7 +195,7 @@ small values.
 ## An overview of the results
 
 ```{r fig.fullwidth=F}
-drake::readd(overview)
+drake::readd(overview_qps)
 ```
 
 ## Range-duration queries
